# news-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/copilot/: architecture-decisions.md  context.md  ollama-setup.md
.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 2e2448582166_initial_schema.py  baf6ee849f28_add_alerts_table.py  ec2d8fa923e7_add_users_table.py
backend/src/: __init__.py
backend/src/core/: __init__.py  logging.py
backend/src/core/config/: __init__.py  settings.py
backend/src/core/exceptions/: __init__.py
backend/src/core/logging/: __init__.py
backend/src/domain/entities/: __init__.py  alert.py  article.py  source.py  user_profile.py
backend/src/domain/ports/: __init__.py  ai_provider.py
backend/src/domain/repositories/: __init__.py
backend/src/domain/services/: alert_service.py  deduplication.py  relevance_scoring.py
backend/src/domain/value_objects/: __init__.py
backend/src/infrastructure/ai/gemini/: adapter.py
backend/src/infrastructure/ai/ollama/: adapter.py
backend/src/infrastructure/auth/: jwt.py  password.py
backend/src/infrastructure/collectors/rss/: collector.py
backend/src/infrastructure/database/: engine.py
backend/src/infrastructure/database/models/: alert.py  article.py  source.py  types.py  user.py
backend/src/infrastructure/database/repositories/: __init__.py  alert_repo.py  article_repo.py  source_repo.py  user_profile_repo.py  user_repo.py
backend/src/infrastructure/messaging/: celery_app.py
backend/src/infrastructure/messaging/tasks/: collect_feeds.py  compute_trends.py  run_ai_pipeline.py  send_alerts.py  send_daily_digest.py  update_implicit_weights.py
backend/src/infrastructure/notifications/email/: smtp_adapter.py
backend/src/interfaces/api/: main.py
backend/src/interfaces/api/dependencies/: __init__.py
backend/src/interfaces/api/routers/: __init__.py  alerts.py  articles.py  auth.py  profile.py  sources.py
backend/src/interfaces/api/schemas/: __init__.py  alert.py  article.py  common.py  profile.py  source.py
backend/src/interfaces/cli/: manage.py  seed_sources.py
backend/src/use_cases/: collect_feeds.py  compile_digest.py  compute_trends.py  login_user.py  register_user.py  run_ai_pipeline.py  send_alerts.py  update_implicit_weights.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_articles.py  test_api_phase5.py  test_api_phase7.py  test_api_sources.py  test_rss_collector.py  test_tasks.py
backend/tests/unit/: test_ai_adapters.py  test_deduplication.py  test_phase5_use_cases.py  test_phase7_auth.py  test_relevance_scoring.py  test_run_ai_pipeline.py
docs/: SPEC.md
frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/alerts/: page.tsx
frontend/src/app/(main)/profile/: page.tsx
frontend/src/components/: article-card.tsx  article-drawer.tsx  protected-route.tsx  providers.tsx  sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  drawer.tsx  input.tsx  skeleton.tsx
frontend/src/lib/: api.ts  hooks.ts  schemas.ts  utils.ts
frontend/src/store/: auth.ts
(+4 files in other folders)
